New requirements.txt and new v2 script (in progress)

--- a/requirements.txt
+++ b/requirements.txt
@@ -1,12 +1,15 @@
-joblib==1.3.2
-nltk==3.8.1
-openai==1.43.1
-pandas==2.2.2
-PyQt5==5.15.11
-qasync==0.27.1
-qt_material==2.14
-Requests==2.32.3
-scikit_learn==1.3.2
-sentence_transformers==3.0.1
-streamlit==1.37.1
-httpx==0.27.2
+datetime
+joblib
+logging
+nltk
+openai
+os
+pandas
+re
+sentence_transformers
+sklearn
+streamlit
+streamlit_extras
+subprocess
+sys
+transformers
