V2 now shows response generation time. V1 edited to use newer incident export. v3 folder renamed to "legacy files".

--- a/.gitignore
+++ b/.gitignore
@@ -1,9 +1,9 @@
 /venv/
 tickets_dataset.csv
-/v3/tfidf_vectorizer2.pkl
-/v3/tfidf_vectorizer.pkl
-/v3/sbert_model.pkl
-/v3/decision_tree_model2.pkl
-/v3/knn_model.pkl
-/v3/knn_sbert_model.pkl
+/legacy files/tfidf_vectorizer2.pkl
+/legacy files/tfidf_vectorizer.pkl
+/legacy files/sbert_model.pkl
+/legacy files/decision_tree_model2.pkl
+/legacy files/knn_model.pkl
+/legacy files/knn_sbert_model.pkl
 /tickets_dataset_NEW.csv
